--- a/css/styles.css
+++ b/css/styles.css
@@ -187,6 +187,48 @@ body{
     height: 12em;
 }
 
+.centeredRow{
+    margin: 4em 0 0 0 ;
+    display: flex;
+    justify-content: center;
+}
+.gridTools{
+    display: grid;
+    max-width: 55rem;
+    grid-template-columns: 21rem 10rem 21rem;
+    grid-template-rows: 18rem 5rem 18rem ;
+}
+.gridTools div:nth-child(1){
+    grid-column: 1;
+    grid-row: 1;
+    background-color: var(--main-text-color);
+    border-radius: 25% 0;
+}
+.gridTools div:nth-child(2){
+    grid-column: 3;
+    grid-row: 1;
+    background-color: var(--main-text-color);
+    border-radius: 0% 25%;
+
+}
+.gridTools div:nth-child(3){
+    grid-column: 1;
+    grid-row: 3;
+    background-color: var(--main-text-color);
+    border-radius: 0% 25%;
+}
+.gridTools div:nth-child(4){
+    grid-column: 3;
+    grid-row: 3;
+    background-color: var(--main-text-color);
+    
+    border-radius: 25% 0;
+}
+.gridTools div:nth-child(5){
+
+}
+
+
 @media (max-width: 800px) {
     html{
         font-size: 10px;
