--- a/css/styles.css
+++ b/css/styles.css
@@ -196,15 +196,19 @@ body{
     display: grid;
     max-width: 55rem;
     grid-template-columns: 21rem 10rem 21rem;
-    grid-template-rows: 18rem 5rem 18rem ;
+    grid-template-rows: 16rem 5rem 16rem ;
 }
+
+
 .gridTools div:nth-child(1){
+    transition: all .2s ease-in-out; 
     grid-column: 1;
     grid-row: 1;
     background-color: var(--main-text-color);
     border-radius: 25% 0;
 }
 .gridTools div:nth-child(2){
+    transition: all .2s ease-in-out; 
     grid-column: 3;
     grid-row: 1;
     background-color: var(--main-text-color);
@@ -212,23 +216,48 @@ body{
 
 }
 .gridTools div:nth-child(3){
+    transition: all .2s ease-in-out; 
     grid-column: 1;
     grid-row: 3;
     background-color: var(--main-text-color);
     border-radius: 0% 25%;
 }
 .gridTools div:nth-child(4){
+    transition: all .2s ease-in-out; 
     grid-column: 3;
     grid-row: 3;
     background-color: var(--main-text-color);
-    
     border-radius: 25% 0;
 }
 .gridTools div:nth-child(5){
-
+    transition: all .2s ease-in-out; 
+    display: flex;
+    grid-column: 2;
+    grid-row: 1/-1;
+    flex-direction: column;
+    justify-content: center;
 }
+#centerToolsCircle{
+    background-color: var(--secondary-color);
+    min-width: 10rem; 
+    min-height: 10rem;
+    border-radius: 50% 50%;
+}
+.gridTools div:hover:nth-child(n){
+    transform: scale(1.25, 1.5);
+} 
 
 
+
+
+@keyframes grow {
+    0% {
+      min-height: 18rem;
+    }
+    100% {
+      min-height: 20rem;
+    }
+  }
 @media (max-width: 800px) {
     html{
         font-size: 10px;
