--- a/css/styles.css
+++ b/css/styles.css
@@ -203,7 +203,12 @@ body{
 .gridTools div:nth-child(1){
     transition: all .2s ease-in-out; 
     grid-column: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1em 0em;
     grid-row: 1;
+    justify-content: space-evenly;
     background-color: var(--main-text-color);
     border-radius: 25% 0;
 }
@@ -243,13 +248,53 @@ body{
     min-height: 10rem;
     border-radius: 50% 50%;
 }
-.gridTools div:hover:nth-child(n){
+#centerToolsCircle:hover{
+    transform: scale(1.25, 1.5);
+}
+.cornerTool{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1em 0em;
+    justify-content: space-evenly;
+}
+.cornerTool:hover{
     transform: scale(1.25, 1.5);
 } 
+.cornerTool:hover .staticToolImg{
+    transform: scale(0.8 , 0.66666666666) translateZ(0);
+    content:url("../resources/images/metronome.gif");
+}
 
 
+.showOnHover{
+    visibility: hidden;
+    height: 0px;
+    opacity: 0;
+    transition: all .1s ease-in-out; 
+}
+.cornerTool:hover .showOnHover{ 
+    visibility: visible;  
+    opacity: 1;
+    transform: scale(0.8 , 0.66666666666) ; 
+}
+.staticToolImg{
+    transition: all .2s ease-in-out; 
+    max-width: 7rem;
+    min-height: 7rem;
+    max-height: 7rem;
+    -webkit-transform: scale(1 , 1) translateZ(0); 
+    border-radius: 50% 50% 50% 50%;
+}
 
-
+.noMarginRecord{
+    margin: 0px;
+    transform: scale(1 ,1);
+    transition: all .2s ease-in-out; 
+}
+.cornerTool:hover .noMarginRecord{
+    transform: scale(0.8 , 0.66666666666);
+}
 @keyframes grow {
     0% {
       min-height: 18rem;
