--- a/css/styles.css
+++ b/css/styles.css
@@ -435,6 +435,33 @@ workspace
     background-color: var(--main-text-color);
     color: var(--white-background) ; 
     }
+
+.timerSection{
+    border: 1px solid var(--main-text-color);
+    border-radius: 0.5rem;
+    margin: 1rem 0.5rem; 
+    max-width: 11rem;
+    background-color: var(--main-text-color);
+    color: var(--white-background);
+    padding: 0.5rem;
+    flex: 1 1 50%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+#sectionsContainer{
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+.timerSection.active{
+    background-color: var(--secondary-color);
+    transform: scale(1.1,1.1);
+    border: 1px solid var(--secondary-color);
+    color: var(--main-text-color);
+}
+
 @keyframes grow {
     0% {
       min-height: 18rem;
