--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
     --main-text-color: #6C63FF; 
     --white-background : #fff ; 
     --secondary-color : #2F2E41 ;
+    --nice-grey : 	#DCDCDC; 
 }
 html{   
      font-family: 'Montserrat';
@@ -465,7 +466,25 @@ workspace
     border: 1px solid var(--secondary-color);
     color: var(--main-text-color);
 }
-
+.centeredLogo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.smallStats{
+    display: flex;
+    justify-content: space-evenly;
+}
+.smallStat{
+    background-color: var(--nice-grey);
+    padding: 1rem;
+    border-radius: 00.5rem;
+    display: flex;
+    min-width: 11rem;
+}
+.smallStat p{
+    margin: 00.5rem;
+}
 @keyframes grow {
     0% {
       min-height: 18rem;
