added edit profile page

--- a/css/styles.css
+++ b/css/styles.css
@@ -495,7 +495,42 @@ workspace
 }
 #sentence span{
     background-color: var(--red);
+} 
+
+
+li {
+    color: var(--nice-grey);
+    text-decoration: none;
+    list-style: none
 }
+li.active{
+    color: var(--main-text-color);
+}
+.profileContainer{
+    display: flex;
+
+}
+
+.userInput{
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 90%;
+    align-items: center;
+  
+}
+
+.userInput input{
+    margin: 0.5rem 0.5rem;
+    min-height: 2rem;
+
+}
+
+#changePassword{
+    min-width: 11.0625rem;
+    min-height: 2rem;
+}
+
+
 @keyframes grow {
     0% {
       min-height: 18rem;
